<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_Fond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/LogoOpenWeather"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo_open_weather" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <ImageView
            android:id="@+id/imageView_WeatherStatus"
            android:layout_width="@dimen/ImageSizeWeatherStatus"
            android:layout_height="@dimen/ImageSizeWeatherStatus"
            android:adjustViewBounds="true"
            android:contentDescription="@string/WeatherStatus"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView_SetTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SimpleInteger"
            android:textColor="@color/black"
            android:paddingTop="@dimen/PaddingTopTemperature"
            android:textSize="@dimen/TextSizeTemperature"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/marginRightTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_WeatherStatus"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:id="@+id/textViewIconDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/PaddingTopTemperature"
            android:textSize="@dimen/TextSizeTemperature"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/textView_SetTemperature"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            android:text="@string/Degree" />

        <TextView
            android:id="@+id/textView_SetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/SimpleText"
            android:textSize="@dimen/TextSizeTitle"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="@dimen/PaddingDate"
            android:textStyle="italic"
            android:lineSpacingExtra="@dimen/SpacingExtraDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_WeatherStatus"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetTemperature" />

        <ImageView
            android:id="@+id/imageView_IconCity"
            android:layout_width="@dimen/ImageSizeIconCity"
            android:layout_height="@dimen/ImageSizeIconCity"
            android:layout_marginStart="@dimen/MarginStartIconCity"
            android:layout_marginTop="@dimen/MarginTopIconCity"
            android:contentDescription="@string/IconCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_tower" />

        <TextView
            android:id="@+id/textView_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MarginTopTitle"
            android:textSize="@dimen/TextSizeTitle"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/MarginStartTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_SetDate"
            app:layout_constraintEnd_toStartOf="@+id/textView_SetDescription"
            android:text="@string/Description" />

        <TextView
            android:id="@+id/textView_SetDescription"
            android:layout_width="@dimen/WidthDescription"
            android:layout_height="wrap_content"
            tools:text="@string/LargeSimpleText"
            android:inputType="textMultiLine"
            android:textSize="@dimen/TextSizeSetParameter"
            android:layout_marginTop="@dimen/MarginTopSetParameter"
            android:maxLines="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/marginStartDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_Description"
            app:layout_constraintTop_toBottomOf="@id/textView_SetDate" />

        <TextView
            android:id="@+id/textView_Humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TextSizeTitle"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/MarginTopTitle"
            android:layout_marginStart="@dimen/MarginStartTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetDescription"
            android:text="@string/Humidity" />

        <TextView
            android:id="@+id/percentForHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MarginTopSetParameter"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/marginStartHumidity"
            android:textSize="@dimen/TextSizeSetParameter"
            app:layout_constraintStart_toEndOf="@+id/textView_SetHumidity"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetDescription" />

        <TextView
            android:id="@+id/textView_SetHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MarginTopSetParameter"
            android:gravity="center"
            android:text="@string/SimpleInteger"
            android:layout_marginRight="@dimen/marginRightSetHumidity"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeSetParameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_Humidity"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetDescription" />

        <TextView
            android:id="@+id/textView_WindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MarginStartTitle"
            android:layout_marginTop="@dimen/MarginTopTitle"
            android:text="@string/WindSpeed"
            android:textSize="@dimen/TextSizeTitle"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Humidity" />

        <TextView
            android:id="@+id/textView_SetWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MarginTopSetParameter"
            android:gravity="center"
            android:text="@string/SimpleInteger"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/marginRightSetWindSpeed"
            android:textSize="@dimen/TextSizeSetParameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_WindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetHumidity"
            />
        <TextView
            android:id="@+id/metricForWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MarginTopSetParameter"
            android:text="@string/metric"
            android:textSize="@dimen/TextSizeSetParameter"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/marginStartWindSpeed"
            app:layout_constraintStart_toEndOf="@+id/textView_SetWindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetHumidity" />
        <EditText
            android:id="@+id/TextView_ChangeCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center"
            android:layout_marginTop="@dimen/marginTopChangeCityName"
            android:inputType="textCapSentences"
            android:hint="@string/CityName"
            android:textSize="@dimen/TextSizeTitle"
            app:layout_constraintStart_toEndOf="@id/imageView_IconCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_CityName"
            android:layout_width="@dimen/widthCityName"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopCityName"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeCityName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_IconCity"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="@string/SimpleText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>