<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_Fond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/LogoOpenWeather"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo_open_weather" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <ImageView
            android:id="@+id/imageView_WeatherStatus"
            android:layout_width="@dimen/widthWeatherStatusShimmer"
            android:layout_height="@dimen/heightWeatherStatusShimmer"
            android:layout_marginLeft="@dimen/marginEndShimmer"
            android:adjustViewBounds="true"
            android:background="@drawable/corner_view"
            android:contentDescription="@string/WeatherStatus"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView_SetTemperature"
            android:layout_width="@dimen/widthShimmer"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginEndShimmer"
            android:layout_marginRight="@dimen/marginRightSetTemperatureShimmer"
            android:background="@drawable/corner_view"
            android:gravity="center"
            android:paddingTop="@dimen/paddingTopShimmer"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeTemperature"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_WeatherStatus"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            tools:ignore="TextContrastCheck"
            tools:text="@string/SimpleInteger" />

        <TextView
            android:id="@+id/textViewIconDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTopShimmer"
            android:text="@string/Degree"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeTemperature"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textView_SetTemperature"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:id="@+id/textView_SetDate"
            android:layout_width="@dimen/widthShimmer"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginSetDateShimmer"
            android:layout_marginTop="@dimen/paddingTopShimmer"
            android:layout_marginRight="@dimen/marginSetDateShimmer"
            android:background="@drawable/corner_view"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/SpacingExtraDate"
            android:padding="@dimen/PaddingDate"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeTitle"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_WeatherStatus"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetTemperature"
            tools:ignore="TextContrastCheck"
            tools:text="@string/SimpleText" />

        <ImageView
            android:id="@+id/imageView_IconCity"
            android:layout_width="@dimen/ImageSizeIconCity"
            android:layout_height="@dimen/ImageSizeIconCity"
            android:layout_marginStart="@dimen/MarginStartIconCity"
            android:layout_marginTop="@dimen/MarginTopIconCity"
            android:contentDescription="@string/IconCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_tower" />

        <TextView
            android:id="@+id/textView_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MarginStartTitle"
            android:layout_marginTop="@dimen/marginTop25dpShimmer"
            android:gravity="center"
            android:text="@string/Description"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeTitle"
            app:layout_constraintEnd_toStartOf="@+id/textView_SetDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_SetDate" />

        <TextView
            android:id="@+id/textView_SetDescription"
            android:layout_width="@dimen/WidthDescription"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartSetDescriptionShimmer"
            android:layout_marginTop="@dimen/marginTopSetDescriptionShimmer"
            android:layout_marginEnd="@dimen/marginEndShimmer"
            android:background="@drawable/corner_view"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeSetParameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_Description"
            app:layout_constraintTop_toBottomOf="@id/textView_SetDate"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            tools:text="@string/SimpleText" />

        <TextView
            android:id="@+id/textView_Humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MarginStartTitle"
            android:layout_marginTop="@dimen/marginTop25dpShimmer"
            android:text="@string/Humidity"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetDescription" />


        <TextView
            android:id="@+id/textView_SetHumidity"
            android:layout_width="@dimen/widthShimmer"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MarginStartSetHumidityShimmer"
            android:layout_marginTop="@dimen/MarginTopSetHumidityShimmer"
            android:layout_marginEnd="@dimen/marginEndShimmer"
            android:background="@drawable/corner_view"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeSetParameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_Humidity"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetDescription"
            tools:text="@string/SimpleInteger" />

        <TextView
            android:id="@+id/textView_WindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/MarginStartTitle"
            android:layout_marginTop="@dimen/marginTopWindSpeedShimmer"
            android:text="@string/WindSpeed"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Humidity" />

        <TextView
            android:id="@+id/textView_SetWindSpeed"
            android:layout_width="@dimen/widthShimmer"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartSetWindSpeedShimmer"
            android:layout_marginTop="@dimen/marginTopSetWindSpeedShimmer"
            android:layout_marginEnd="@dimen/marginEndShimmer"
            android:background="@drawable/corner_view"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeSetParameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_WindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/textView_SetHumidity"
            tools:text="@string/SimpleInteger" />


        <EditText
            android:id="@+id/TextView_ChangeCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopChangeCityName"
            android:ems="8"
            android:gravity="center"
            android:hint="@string/CityName"
            android:inputType="textCapSentences"
            android:textSize="@dimen/TextSizeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_IconCity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_CityName"
            android:layout_width="@dimen/widthCityName"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginEndShimmer"
            android:layout_marginTop="@dimen/marginTopCityName"
            android:layout_marginRight="@dimen/marginEndShimmer"
            android:background="@drawable/corner_view"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeCityName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_IconCity"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="@string/SimpleText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>